# practice2026

./: .clang-format  .gitignore  26m206_quantize.cpp  CMakeLists.txt  README.md  bitstream.hpp  coding.hpp  cv_test.cpp  huffman_tables.hpp  jpgheaders.cpp  jpgheaders.hpp  measure.hpp  qtable.hpp  sip.hpp  ycctype.hpp  zigzag.hpp
